tdf#157696 vcl a11y: Move qt's translation to IA2 text attrs for reuse

Qt expects the text attributes to be reported as IAccessible2
attributes. Therefore, there is a translation/conversion
from the LO-internal text attributes to IAccessible2 text
attributes in `QtAccessibleWidget::attributes`.

Move the logic from the qt-VCL-specific code into a new
VCL helper class `AccessibleTextAttributeHelper`, so
it can be reused in winaccessibility in following commits.

Change-Id: I434481faa53c74bae95cae5b2c9f0907b87fb1bb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157804
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>